# buffy

./: .gitignore  Cargo.toml  README.md
examples/: basic_crossterm.rs  basic_window.rs
src/: buffer.rs  cell.rs  iter_buffer.rs  lib.rs  line.rs  location.rs  queue.rs  test.rs
