[package]
name = "buffy"
version = "0.0.1"
authors = ["cowboy8625 <43012445+cowboy8625@users.noreply.github.com>"]
edition = "2018"
description = "A text buffer"
readme = "README.md"
repository = "https://github.com/cowboy8625/buffy"
license = "Apache-2.0"
keywords = ["buffer"]

[dependencies]
crossterm = { version = "0.18.2", optional = true }

[dev-dependencies]
crossterm = "0.18.2"

[features]
with_crossterm = ["crossterm"]
