[package]
name = "buffy"
version = "0.1.0"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2018"
description = "A screen buffer that handles unicode for text editors."
readme = "README.md"
repository = "https://github.com/cowboy8625/buffy"
license = "Apache-2.0"
keywords = ["buffer", "utf-8", "unicode"]

[dependencies]
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"

